[package]
name = "crabstorm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"

[[bin]]
name = "unique"

[[bin]]
name = "broadcast"

[[bin]]
name = "counter"

[[bin]]
name = "logs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
rand = "0.8"
ulid = "1"
smol = "1.3"
futures = "0.3"
