[package]
name = "crabstorm"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "echo"

[[bin]]
name = "unique"

[[bin]]
name = "broadcast"

[[bin]]
name = "counter"

[[bin]]
name = "set"

[[bin]]
name = "logs"

[dependencies]
anyhow = "1"
flume = "0.11"
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
ulid = "1"

# my async runtime
[dependencies.inel]
git = "https://github.com/mihneabuz/inel.git"
